--- a/style.css
+++ b/style.css
@@ -109,3 +109,55 @@ body {
     margin: 0px;
   }
 }
+
+
+
+
+
+a {
+        color: rgb(0, 0, 0);
+        text-decoration: none;
+      }
+      .git-hub-1111 {
+        background-image: url("download-removebg-preview.png");
+        background-size: cover;
+        height: 27px;
+        width: 37px;
+        margin-right: 6px;
+      }
+      .linkedin-1111 {
+        background-image: url("download12-removebg-preview.png");
+        background-size: cover;
+        height: 24px;
+        width: 25px;
+        margin-right: 6px;
+      }
+
+      .main-div-1111 {
+        justify-content: center;
+        position: fixed;
+        right: 2rem;
+        bottom: 2rem;
+        font-size: 0.9rem;
+        display: flex;
+        flex-direction: column;
+
+        background-image: linear-gradient(0deg, #d9afd9 0%, #97d9e1 100%);
+        border-radius: 30px;
+        height: 70px;
+        width: 110px;
+      }
+
+      .main-2222 {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-left: 10px;
+        margin-top: 3px;
+      }
+      .main-1111 {
+        display: flex;
+
+        flex-direction: row;
+        align-items: center;
+      }
